# MELA

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  aclocal.m4  circle.yml  configure  configure.ac
.circleci/: config.yml
doc/: Delta19.nb  Delta3.nb  QEDEvolution.tex
doc/code/: ReferenceNf1.ini  ReferenceNf3.ini  VariableNf.cc
doc/plots/: VariableNf.py  alpha.py
inc/MELA/: MELA.h
lib/: Makefile.am  Makefile.in
logos/: logomela.eps
m4/: apfel.m4
run/: Alpha.f  CMakeLists.txt  Evolution.f  EvolutionCard.f  EvolutionCardCpp.cc  EvolutionCpp.cc  EvolutionDebug.f  LHAPDFgrid.f  Makefile.am  Makefile.in  Reference.ini  SIDISStructureFunctions.f  SIDISStructureFunctionsPol.f  StructureFunctions.f  Timing.f  refold_NL3_NF0_VFNS.ini  refq_NL3_NF0_FFNS.ini  refq_NL3_NF0_VFNS.ini
src/: Makefile.am  Makefile.in
src/DIS/: ComputeChargesDIS.f  MassiveCoefficientFunctions.f  NCoefficientFunctions.f  NStructureFunctions.f  SIDISNStructureFunctions.f  SIDISNStructureFunctionsPol.f  SIDISxStructureFunctions.f  SIDISxStructureFunctionsPol.f  SemiInclusiveCoefficientFunctions.f  ZeroMassCoefficientFunctions.f  adlersr_coeff.f  xStructureFunctions.f
src/commons/: LHAgrid.h  Makefile.am  SinThetaW.h  activeflavours.h  adlersr.h  alpha.h  alphaem.h  alphas.h  beta.h  charges.h  colfact.h  distf.h  evol.h  evscale.h  facscheme.h  hqmass.h  ipt.h  massthrs.h  modev.h  nf.h  nffn.h  nfmax.h  nfsum.h  ns.h  pol.h  process.h  renfacscales.h  renscheme.h  rotations.h  tecparam.h
src/core/: betac.f  cppwrapper.cc  ddilog.f  dgauss.f  gammal.f  hypgeo.f  matrixexp.f  mmult.f
src/evolution/: BasisTransformations.f  LHAPDFgrid.f  NDistributions.f  alpha.f  alphaMZ_analytic.f  alphaMZ_magnus.f  alphaMZ_pathordering.f  alpha_fixed.f  alphaem.f  alphas.f  andim_lo.f  andim_lo_pol.f  andim_lo_tl.f  andim_nlo.f  andim_nlo_pol.f  andim_nlo_tl.f  andim_nnlo.f  andim_nnlo_tl.f  crossing.f  evol_alpxx_magnus.f  evol_alpxx_pathordering.f  evol_msbar_pathordering.f  evolfactn.f  externalsetmela.cc  gfuncs.f  initialconditions.f  matchcoef2ns.f  matchcoef2sg.f  mkdir.cc  path_ordering.f  toyLHPDFs.f  umatrix.f  xDistributions.f  zfunc.f
src/initialization/: EnableQuarks.f  InitializeEvolution.f  ReadParameters.f  SetActiveFlav.f  SetAlpha.f  SetDefaultParameters.f  SetEvolutionMode.f  SetFactorisationScheme.f  SetFlavourScheme.f  SetNFFN.f  SetNFmax.f  SetPerturbativeOrder.f  SetRenFacRatio.f  SetRenormalisationScheme.f  SetTecParam.f  SetThresholds.f  getters.f  initBeta.f  initCouplings.f  setters.f
