AM_FCFLAGS = $(FCLIBS)
AM_LDFLAGS = $(top_builddir)/lib/libMELA.la #$(APFEL_LDFLAGS) $(LHAPDF_LDFLAGS)

noinst_PROGRAMS = Timing Evolution StructureFunctions SIDISStructureFunctions
Timing_SOURCES = Timing.f
Evolution_SOURCES = Evolution.f
StructureFunctions_SOURCES = StructureFunctions.f
SIDISStructureFunctions_SOURCES = SIDISStructureFunctions.f
